# vibrant

./: Cargo.toml  makefile
assets/: girl.glb  girl.gltf  registry.json
assets/models/: World.glb  map1.glb  map1_dynamic.glb
src/: fps_temp.rs  main.rs
src/physics/: mod.rs  physics_replace_proxies.rs  utils.rs
src/player/: controller.rs  keybinds.rs  mod.rs
src/world/: mod.rs
